# birber

./: .gitignore  README.md  TODO.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Header.tsx  Landing.tsx  Layout.tsx  PhotoBrowser.tsx  StackManager.tsx  main.tsx
src-tauri/: .env  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db_schema.rs  lib.rs  main.rs  metatable.rs  photo_file_manager.rs  photo_queries.rs  raw_processing.rs  sync.rs
src-tauri/src/db/migrations/: 001.sql
src-tauri/src/entities/: mod.rs  photo_record.rs  pipeline_parameters.rs  raw_record.rs
src/components/: HideAndKeep.tsx  PhotoDateSelector.tsx  PhotoItem.tsx  RawCrop.tsx  RawItem.tsx  Thumbnail.tsx  ZoomView.tsx
src/components/SteppedPhotoCreator/: StepInitialCrop.tsx  SteppedPhotoCreator.tsx
src/components/ui/: button-group.tsx  button.tsx  calendar.tsx  switch.tsx
src/db/: sync.ts
src/entities/: PhotoRecord.ts  PipelineParameters.ts  RawRecord.ts
src/itemViews/: ItemView.tsx  PhotoView.tsx  RawView.tsx
src/lib/: cachedPromise.ts  utils.ts
src/store/: store.ts  workspaceSlice.ts
